Transform to official RunPod worker structure for network volumes
COMPLETE RESTRUCTURE following official runpod-workers patterns:

 NEW STRUCTURE:
 .runpod/              # RunPod platform configs
 docs/                 # Complete documentation
    deployment.md     # GitHub integration guide
    network-volume-setup.md # Volume prep guide
 src/                  # Source code (official pattern)
    start.sh          # ComfyUI startup script
 tests/                # Unit test framework
 .gitignore           # Proper exclusions
 LICENSE              # MIT license
 README.md            # Professional documentation

 NETWORK VOLUME OPTIMIZATION:
- Container starts ComfyUI from /workspace/ComfyUI at boot
- Handler processes requests only (no startup delays)
- 5GB container vs 30GB+ official images
- Instant response times for Social Twin workflows

 ARCHITECTURE BENEFITS:
-  Boot-time startup (not per-request)
-  Cost effective (small container + persistent volume)
-  Auto-deployment via GitHub integration
-  FLUX-ready with user's exact setup

Repository now matches official runpod-workers structure exactly
but optimized for existing ComfyUI network volume installations.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # Python
 __pycache__/
 *.py[cod]
-*.class
+*$py.class
 *.so
 .Python
 build/
@@ -21,7 +21,7 @@ wheels/
 *.egg
 MANIFEST
 
-# Virtual environments
+# Environment variables
 .env
 .venv
 env/
@@ -50,32 +50,17 @@ Thumbs.db
 *.log
 logs/
 
+# Test coverage
+htmlcov/
+.coverage
+.coverage.*
+coverage.xml
+*.cover
+
+# API Keys and secrets
+*api_key*
+*secret*
+config.json
+
 # RunPod specific
 .runpod_cache/
-runpod_logs/
-
-# Model files (too large for git)
-*.safetensors
-*.ckpt
-*.pth
-*.bin
-
-# Generated images
-output/
-*.png
-*.jpg
-*.jpeg
-
-# API keys and secrets
-.env.local
-config.json
-secrets.json
-
-# Test artifacts
-.pytest_cache/
-.coverage
-htmlcov/
-
-# Node.js (for test scripts)
-node_modules/
-package-lock.json
